added the sounds, mute button and tempo slider

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
     <audio src="./sounds/kick-classic.wav" class="kick-sound"></audio>
     <audio src="./sounds/snare-acoustic01.wav" class="snare-sound"></audio>
     <audio src="./sounds/hihat-acoustic01.wav" class="hihat-sound"></audio>
+
+    <div class="tempo">
+<input type="range" value="150" class="tempo-slider" min="20" max="500">
+<p class="tempo-text">Tempo: <span class="tempo-nr">150</span></p>
+    </div>
   </div>
 
 
